<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/favorite"
            android:title="@string/wishlist" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/shopping_bag"
            android:title="@string/orders" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>